# LlamaInference

./: .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
include/base/: alloc.h  base.h  buffer_.h  cuda_config.h  tick.h  tiktoken.h
include/model/: config.h  llama3.h  model.h  raw_model_data.h
include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
include/sampler/: argmax_sampler.h  sampler.h
include/tensor/: tensor.h
inference/: llama3_infer.py
source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp
source/model/: llama3.cpp  model.cpp  raw_model_data.cpp
source/op/: add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
source/op/kernels/: kernel_interface.cpp  kernel_interface.h
source/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.cpp  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
source/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cu  argmax_kernel.cuh  emb_kernel.cu  emb_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  (+6 more)
source/sampler/: argmax_sampler.cpp
source/tensor/: tensor.cpp
test/base/: test_alloc.cpp  test_base.cpp  test_cuda.cu  test_re2.cpp  test_tich.cpp  test_tictoken.cpp  test_unordered_dense.cpp
